--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">FacebookApp</string>
-    <string name="facebook_app_id">.........</string>
-    <string name="fb_login_protocol_scheme">..............</string>
+    <string name="facebook_app_id">164857804276548</string>
+    <string name="fb_login_protocol_scheme">fb164857804276548</string>
 </resources>
